[gd_scene load_steps=14 format=3 uid="uid://cntvy2x3iin6x"]

[ext_resource type="Script" path="res://scenes/fruit_enemy_pineapple.gd" id="1_bjjgp"]
[ext_resource type="Texture2D" uid="uid://cl7bby1akstc6" path="res://textures/enemys/enemy-orange/frame0000.png" id="1_rdaos"]
[ext_resource type="Texture2D" uid="uid://c05xgmulhj2hh" path="res://textures/enemys/enemy-orange/frame0001.png" id="2_b22ps"]
[ext_resource type="Texture2D" uid="uid://6f2vpw1eylxd" path="res://textures/enemys/enemy-orange/frame0002.png" id="3_jfumd"]
[ext_resource type="Texture2D" uid="uid://dkgwocv3g413w" path="res://textures/enemys/enemy-orange/frame0003.png" id="4_l4ljb"]
[ext_resource type="Texture2D" uid="uid://0hthd4ei4kjv" path="res://textures/enemys/enemy-orange/frame0004.png" id="5_tlf77"]
[ext_resource type="Texture2D" uid="uid://bt74ypl83e8ub" path="res://textures/enemys/enemy-orange/frame0005.png" id="6_0bs2h"]
[ext_resource type="Texture2D" uid="uid://mb6n017bjcd7" path="res://textures/enemys/enemy-orange/frame0006.png" id="7_3kwtw"]
[ext_resource type="Texture2D" uid="uid://c141tojvk8k77" path="res://textures/enemys/enemy-orange/frame0007.png" id="8_uo6qr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_oode1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_rdaos")
}, {
"duration": 1.0,
"texture": ExtResource("2_b22ps")
}, {
"duration": 1.0,
"texture": ExtResource("3_jfumd")
}, {
"duration": 1.0,
"texture": ExtResource("4_l4ljb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_tlf77")
}, {
"duration": 1.0,
"texture": ExtResource("6_0bs2h")
}, {
"duration": 1.0,
"texture": ExtResource("7_3kwtw")
}, {
"duration": 1.0,
"texture": ExtResource("8_uo6qr")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_e8sjp"]
radius = 440.328

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sbvg6"]
radius = 74.0
height = 150.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hn5en"]
radius = 109.179

[node name="fruit-enemy-pineapple" type="RigidBody2D" groups=["enemy"]]
z_index = 1
y_sort_enabled = true
collision_layer = 2
collision_mask = 3
mass = 0.001
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_bjjgp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_oode1")
animation = &"idle"
frame_progress = 0.971815
offset = Vector2(0, -112.905)

[node name="detection_area" type="Area2D" parent="."]
visible = false
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(-2, -88)
rotation = 1.5708
shape = SubResource("CircleShape2D_e8sjp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
z_index = 1
position = Vector2(0, -89)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_sbvg6")

[node name="enemy_damage" type="Area2D" parent="."]
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_damage" groups=["enemy"]]
position = Vector2(0, -93)
shape = SubResource("CircleShape2D_hn5en")

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
